📝 update api spec
